2015-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix Coverity 44726 "Division or
	modulo by float zero".  I don't think that this can actually
	happen due to prior checks.

	* magick/xwindow.c (MagickXMakeWindow): Silence Coverity 10281
	"Copy into fixed size buffer".

	* coders/pdf.c (ReadPDFImage): Silence Coverity 10241 "Copy into
	fixed size buffer".

	* magick/type.c (ReadTypeConfigureFile): Silence Coverity 10242
	"Copy into fixed size buffer".

	* magick/utility.c (GetPathComponent): Silence Coverity 10263
	"Copy into fixed size buffer".

	* coders/txt.c (ReadTXTImage): Silence Coverity 10287 "Copy into
	fixed size buffer".

	* coders/ps.c (WritePSImage): Silence Coverity 10289 "Copy into
	fixed size buffer".

	* magick/delegate.c (ReadConfigureFile): Silence Coverity 10297
	"Copy into fixed size buffer".

	* magick/log.c (ReadLogConfigureFile): Silence Coverity 10300
	"Copy into fixed size buffer".

	* coders/ps3.c (WritePS3Image): Silence Coverity 10303 "Copy into
	fixed size buffer".

	* coders/pdf.c (WritePDFImage): Silence Coverity 10304 "Copy into
	fixed size buffer".

	* coders/ps.c (ReadPSImage): Silence Coverity 10306 "Copy into
	fixed size buffer".

	* coders/msl.c (MSLStartElement): Silence Coverity 10308 "Copy
	into fixed size buffer".

	* coders/ps2.c (WritePS2Image): Silence Coverity 10309 "Copy into
	fixed size buffer".

	* Magick++/lib/Geometry.cpp (operator): Silence Coverity 44749
	"Copy into fixed size buffer".

	* Magick++/lib/Image.cpp (annotate): Silence Coverity 44750 "Copy
	into fixed size buffer".

	* coders/ept.c (ReadEPTImage): Silence Coverity 44751 "Copy into
	fixed size buffer".

	* coders/wmf.c (ipa_device_begin): Silence Coverity 44753 "Copy
	into fixed size buffer".
	(lite_font_map): Silence Coverity 44752 "Copy into fixed size
	buffer".

	* magick/random.c (InitializeMagickRandomKernel): Silence Coverity
	10091 "Don't Call" in the case where /dev/random is available.
