@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2015-03-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>Magick++/lib/Magick++/Include.h (Magick): Fix compilation with
+'clang' under Linux.  Build was broken yesterday.</li>
+<li>coders/tiff.c (QuantumTransferMode): Fix reading Old JPEG and
+YCbCr sample images from libtiff pics-3.8.0.tar.gz image file
+collection.  There was a regression for YCbCr added in last
+release.</li>
+</ul>
+</blockquote>
 <p>2015-03-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -117,7 +128,7 @@ extension. Fix for Coverity issue 44744.</li>
 about dereference after NULL check.  Fix for Coverity issue 44729.</li>
 <li>coders/png.c (ReadOnePNGImage): Redid the &quot;Respect the
 PixelsResource limit&quot; patch of March 7, using unsigned arithmetic
-to determine the width limit.  Sometimes the caluclated
+to determine the width limit.  Sometimes the calculated
 width limit was incorrectly zero.</li>
 </ul>
 </blockquote>
